[package]
name = "GLENgine-rs"
version = "0.1.0"
authors = ["Johnathan Lee <jfl747076@gmail.com>"]

[features]
"default" = []
"no_checks" = []

[dependencies]
cgmath = "0.16.1"
specs = "0.12.0"
specs-derive = "*"
bidrag = {path = "bidrag"}
winit = "0.16.0"
vulkano = "0.9.0"
image = "*"
gltf = "0.11"
smallvec = "*"
num-traits = "0.2"